--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="/assets/js/burgers.js"></script>
+	<script src="/assets/js/burgers_app.js"></script>
 </head>
 
 <body>
